src/CSS/main.css
/* CSS Document */
/* Notes: Blue:2d32af Red:e11932 */
* {
	box-sizing: border-box;
	font-family: Interstate;
}
body {
	margin: 0;
	margin-top: 70px;
	scroll-behavior: smooth;
	line-height: 1.5;
}
nav {
	position: fixed;
	top: 0;
	width: 100%;
	height: 70px;
	z-index: 1;
	list-style-type: none;
  	background-color: #2d32af;
}
.nav-tab-logo{
	height: 50px;
}
#mobile-nav-logo{
	width: 38px;
}
.nav-list {
	display: flex;
	align-items: center;
	margin-left: 62px;
}
.nav-tab {
	text-decoration: none;
	color: white;
	font-family: Interstate;
	font-weight: bold;
	font-size: 25px;
	margin-right: 62px;
	margin-top: 8px;
	vertical-align: middle;
	transition: text-decoration .2s ease-in;
}
.nav-list > a:hover {
	text-decoration: white underline solid
}
@media only screen and (max-width: 770px){
	#nav-bar{
		display: none;
	}
	#mobile-nav-main-container{
		display: flex;
		height: 100%;
		margin-bottom: -2px;
	}
	#mobile-nav-logo-container{
		float: left;
	}
	#mobile-nav-logo-container, #mobile-nav-button{
		font-size: 38px;
		padding: 7.5px 5%;
		margin-top: 7.5px;
	}
	#mobile-nav-bar{
		display: inherit;
		background-color: #2d32af;
	}
	#mobile-nav-list{
		display: none;
		position: fixed;
		width: 100%;
		padding-bottom: 7px;
		background-color: #2d32af;
        z-index: 1;
	}
	#mobile-nav-list > a{
		color: white;
		padding: 14px 16px;
		text-decoration: none;
		text-align: center;
		font-size: 15px;
		display: block;
		border-top: white solid 1px;
		margin-left: 5%;
		margin-right: 5%;
	}
	#mobile-nav-button {
		color: white;
		float: right;
		margin-left: auto;
	}
  	#mobile-nav-list a:hover {
		background-color: white;
		color: #2d32af;
  	}
  	.active {
		background-color: #4CAF50;
		color: white;
  	}
}
@media only screen and (min-width: 770px){
	#nav-bar{
		display: inherit;
		border-bottom: white solid 1px;
	}
	#mobile-nav-bar, #mobile-nav-logo-container,#mobile-nav-logo{
		display: none;
	}
}

